# blazing_agi

./: 2  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
blazing_agi_macros/: Cargo.toml  README.md
blazing_agi_macros/src/: lib.rs
examples/: layer-agi-digest.rs  raw_command.rs  simple_server.rs
src/: agiparse.rs  command.rs  connection.rs  handler.rs  layer.rs  lib.rs  router.rs  serve.rs
src/command/: answer.rs  get_full_variable.rs  raw_command.rs  set_variable.rs  verbose.rs
