[package]
name = "blazing_agi"
version = "0.3.0"
edition = "2021"
license = "MIT-0"
authors = ["Jonathan Schleucher"]
description = "blazing_agi is a FastAGI server focusing on ergonomics and correctness."
repository = "https://github.com/curatorsigma/blazing_agi"
keywords = ["agi","fastagi","asterisk"]
categories = ["network-programming"]
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Add Trace messages while handling requests.
tracing = ["dep:tracing"]

[dependencies]
async-trait = "0.1.81"
tokio = { version = "1.39.3", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
url = "2.5.2"
blazing_agi_macros = { version = "0.1.0" }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
sha1 = "0.10.6"

