[package]
name = "blazing_agi_macros"
version = "0.1.0"
edition = "2021"
license = "MIT-0"
authors = ["Jonathan Schleucher"]
description = "blazing_agi_macro is a companion crate to blazing_agi"
repository = "https://github.com/curatorsigma/blazing_agi"
keywords = ["agi","fastagi","asterisk"]
categories = ["network-programming"]
readme = "README.md"

[lib]
name = "blazing_agi_macros"
path = "./src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

